src/objects/JournalBatch__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Total__c</fullName>
        <description>Used to see if Batch is in Balance</description>
        <label>Batch Total</label>
        <summarizedField>QB_Trans_Detail__c.Debit_Credit__c</summarizedField>
        <summaryForeignKey>QB_Trans_Detail__c.JournalBatch__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IR2_Bal_Value__c</fullName>
        <formula>Batch_Total__c *-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IR2 Bal Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num__c</fullName>
        <label>Num</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLines__c</fullName>
        <label>NumberofLines</label>
        <summaryForeignKey>QB_Trans_Detail__c.JournalBatch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <label>JournalBatch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Num__c</columns>
        <columns>NumberofLines__c</columns>
        <columns>Processed__c</columns>
        <columns>Batch_Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Batch_Total__c</columns>
        <columns>Date__c</columns>
        <columns>NumberofLines__c</columns>
        <columns>Processed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Over_140_Lines</fullName>
        <columns>NAME</columns>
        <columns>Batch_Total__c</columns>
        <columns>Date__c</columns>
        <columns>Num__c</columns>
        <columns>NumberofLines__c</columns>
        <columns>Processed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NumberofLines__c</field>
            <operation>greaterThan</operation>
            <value>140</value>
        </filters>
        <label>Over 140 Lines</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>Processed__c</columns>
        <columns>Num__c</columns>
        <columns>Date__c</columns>
        <columns>NumberofLines__c</columns>
        <columns>Batch_Total__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Unprocessed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Year_2011_Data</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Batch_Total__c</columns>
        <columns>Num__c</columns>
        <columns>NumberofLines__c</columns>
        <columns>Processed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2007</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>lessThan</operation>
            <value>1/1/2009</value>
        </filters>
        <label>Year 2011 Data</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>JNL-{00000000}</displayFormat>
        <label>JournalBatch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JournalBatches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>